# books

./: .gitignore  README.md
codes/microservices-proto/: Cargo.toml
codes/microservices-proto/order/: Cargo.toml
codes/microservices-proto/order/proto/microservices_order/v1/: order.proto
codes/microservices-proto/payment/: Cargo.toml
codes/microservices-proto/payment/proto/microservices_payment/v1/: payment.proto
codes/microservices-proto/shipping/: Cargo.toml
codes/microservices-proto/shipping/proto/microservices_shipping/v1/: shipping.proto
codes/microservices-proto/user/: Cargo.toml  build.rs
codes/microservices-proto/user/proto/microservices_user/v1/: user.proto
codes/microservices-proto/user/src/: lib.rs
codes/nextjs-getting/: README.md  generate-prot.bat  generate-proto.sh  next.config.mjs  package.json  pnpm-lock.yaml
codes/nextjs-getting/src/actions/: sign.ts
codes/tonic-getting/: Cargo.toml  RAEDME.md  README.md  build.rs
codes/tonic-getting/examples/: client-interceptor.rs
codes/tonic-getting/proto/getting/: basic.proto
codes/tonic-getting/proto/getting/v1/: auth.proto  user.proto
codes/tonic-getting/src/: lib.rs  main.rs  pb.rs
codes/tonic-getting/src/grpc/: auth.rs  mod.rs  user.rs
docs/grpc-microservices-with-rust/: 404.html  index.html  preface.html  print.html  searchindex.js  searchindex.json
draft/: async.md
grpc-microservices-with-rust/: README.md  book.toml  publish.sh
grpc-microservices-with-rust/src/: SUMMARY.md  ch01.md  ch02.md  ch03.md  ch04.md  ch05.md  ch07.md  preface.md
postgresql-in-action/: README.md
(+101 files in other folders)
