[workspace]
members = ["user", "order", "shipping", "payment"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
description = "Microservices Protocol Buffers"

[workspace.dependencies]
# -- RPC
tonic = "0.12"
tonic-types = "0.12"
tonic-reflection = "0.12"
tonic-web = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
